fix: FocalPlane/Design page improvements
- FocalPlane: Remove position:absolute from baseCanvas to fix overlap with dropdown
- DesignDetail: Skip camera move when fiber coordinates are null
- SkyViewer: Fix initial jump to only trigger when selectedDesign is set
- DesignsContext: Support URL-specified design ID for initial rank query and page scroll

--- a/frontend/src/components/FocalPlane/FocalPlane.module.scss
+++ b/frontend/src/components/FocalPlane/FocalPlane.module.scss
@@ -5,9 +5,7 @@
 }
 
 .baseCanvas {
-  position: absolute;
-  left: 0;
-  top: 0;
+  display: block;  // インラインのgapを防ぐ
 }
 
 .focusCanvas {
